--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: ghcr.io/banzaicloud/istio-operator
-  tag: "v2.14.0-rc.1"
+  tag: "v2.14.0"
   pullPolicy: IfNotPresent
 replicaCount: 1
 extraArgs: []
