add custom sidecar template feature

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -7882,6 +7882,15 @@ spec:
                         - ports
                         - type
                       type: object
+                    templates:
+                      properties:
+                        custom:
+                          type: string
+                        gateway:
+                          type: string
+                        sidecar:
+                          type: string
+                      type: object
                   type: object
                 telemetryV2:
                   properties:
@@ -16905,6 +16914,15 @@ spec:
                       required:
                         - ports
                         - type
+                      type: object
+                    templates:
+                      properties:
+                        custom:
+                          type: string
+                        gateway:
+                          type: string
+                        sidecar:
+                          type: string
                       type: object
                   type: object
                 telemetryV2:
