--- a/internal/assets/manifests/istio-discovery/templates/istiod-injector-configmap.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/istiod-injector-configmap.yaml
@@ -30,7 +30,7 @@ data:
     - {{ . }}
 {{- end }}
     {{- else }}
-    defaultTemplates: [sidecar]
+    defaultTemplates: [sidecar, sidecarOverrides]
     {{- end }}
     policy: {{ .Values.global.proxy.autoInject }}
     httpProxyEnvs:
