--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -65,7 +65,7 @@ apiVersion: v1
 data:
   config: |-
     # defaultTemplates defines the default template to use for pods that do not explicitly specify a template
-    defaultTemplates: [sidecar]
+    defaultTemplates: [sidecar, sidecarOverrides]
     policy: enabled
     httpProxyEnvs:
       noProxy: localhost
@@ -1217,6 +1217,27 @@ data:
           securityContext:
             fsGroup: 1337
           {{- end }}
+      custom: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: custom
+      gatewayOverrides: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: gateway
+      sidecarOverrides: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: sidecar
   values: |-
     {
       "global": {
@@ -1379,7 +1400,11 @@ data:
         "injectedAnnotations": {},
         "neverInjectSelector": [],
         "rewriteAppHTTPProbe": true,
-        "templates": {}
+        "templates": {
+          "custom": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom\n",
+          "gatewayOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: gateway\n",
+          "sidecarOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: sidecar\n"
+        }
       }
     }
 kind: ConfigMap
