--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -36,7 +36,7 @@ apiVersion: v1
 data:
   config: |-
     # defaultTemplates defines the default template to use for pods that do not explicitly specify a template
-    defaultTemplates: [sidecar]
+    defaultTemplates: [sidecar, sidecarOverrides]
     policy: enabled
     httpProxyEnvs:
       null
@@ -1188,6 +1188,27 @@ data:
           securityContext:
             fsGroup: 1337
           {{- end }}
+      custom: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: custom-passive
+      gatewayOverrides: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: gateway-passive
+      sidecarOverrides: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: sidecar-passive
   values: |-
     {
       "global": {
@@ -1308,7 +1329,11 @@ data:
         "injectedAnnotations": {},
         "neverInjectSelector": [],
         "rewriteAppHTTPProbe": true,
-        "templates": {}
+        "templates": {
+          "custom": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom-passive\n",
+          "gatewayOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: gateway-passive\n",
+          "sidecarOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: sidecar-passive\n"
+        }
       }
     }
 kind: ConfigMap
