--- a/internal/components/discovery/testdata/icp-passive-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-values.yaml
@@ -10,3 +10,26 @@ meshConfig:
   connectTimeout: 5s
   rootNamespace: istio-system
 revision: cp-v116x
+sidecarInjectorWebhook:
+  templates:
+    custom: |
+      spec:
+        containers:
+        - name: istio-proxy
+          env:
+          - name: TEMPLATE
+            value: custom-passive
+    gatewayOverrides: |
+      spec:
+        containers:
+        - name: istio-proxy
+          env:
+          - name: TEMPLATE
+            value: gateway-passive
+    sidecarOverrides: |
+      spec:
+        containers:
+        - name: istio-proxy
+          env:
+          - name: TEMPLATE
+            value: sidecar-passive
