--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -6,7 +6,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiocontrolplanes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.3
+    resource.alpha.banzaicloud.io/revision: 1.16.1
 spec:
   group: servicemesh.cisco.com
   names:
@@ -2351,6 +2351,8 @@ spec:
                                 - required:
                                     - skywalking
                                 - required:
+                                    - opentelemetry
+                                - required:
                                     - prometheus
                                 - required:
                                     - envoyFileAccessLog
@@ -2360,6 +2362,7 @@ spec:
                                     - envoyTcpAls
                                 - required:
                                     - envoyOtelAls
+                                - {}
                           - required:
                               - envoyExtAuthzHttp
                           - required:
@@ -2377,6 +2380,8 @@ spec:
                           - required:
                               - skywalking
                           - required:
+                              - opentelemetry
+                          - required:
                               - prometheus
                           - required:
                               - envoyFileAccessLog
@@ -2386,6 +2391,37 @@ spec:
                               - envoyTcpAls
                           - required:
                               - envoyOtelAls
+                          - not:
+                              anyOf:
+                                - {}
+                                - required:
+                                    - envoyExtAuthzHttp
+                                - required:
+                                    - envoyExtAuthzGrpc
+                                - required:
+                                    - zipkin
+                                - required:
+                                    - lightstep
+                                - required:
+                                    - datadog
+                                - required:
+                                    - stackdriver
+                                - required:
+                                    - opencensus
+                                - required:
+                                    - skywalking
+                                - required:
+                                    - opentelemetry
+                                - required:
+                                    - prometheus
+                                - required:
+                                    - envoyFileAccessLog
+                                - required:
+                                    - envoyHttpAls
+                                - required:
+                                    - envoyTcpAls
+                                - required:
+                                    - envoyOtelAls
                         properties:
                           datadog:
                             properties:
@@ -2568,6 +2604,15 @@ spec:
                                     - B3
                                   type: string
                                 type: array
+                              maxTagLength:
+                                type: integer
+                              port:
+                                type: integer
+                              service:
+                                type: string
+                            type: object
+                          opentelemetry:
+                            properties:
                               maxTagLength:
                                 type: integer
                               port:
@@ -8611,6 +8656,8 @@ spec:
                                 - required:
                                     - skywalking
                                 - required:
+                                    - opentelemetry
+                                - required:
                                     - prometheus
                                 - required:
                                     - envoyFileAccessLog
@@ -8620,6 +8667,7 @@ spec:
                                     - envoyTcpAls
                                 - required:
                                     - envoyOtelAls
+                                - {}
                           - required:
                               - envoyExtAuthzHttp
                           - required:
@@ -8637,6 +8685,8 @@ spec:
                           - required:
                               - skywalking
                           - required:
+                              - opentelemetry
+                          - required:
                               - prometheus
                           - required:
                               - envoyFileAccessLog
@@ -8646,6 +8696,37 @@ spec:
                               - envoyTcpAls
                           - required:
                               - envoyOtelAls
+                          - not:
+                              anyOf:
+                                - {}
+                                - required:
+                                    - envoyExtAuthzHttp
+                                - required:
+                                    - envoyExtAuthzGrpc
+                                - required:
+                                    - zipkin
+                                - required:
+                                    - lightstep
+                                - required:
+                                    - datadog
+                                - required:
+                                    - stackdriver
+                                - required:
+                                    - opencensus
+                                - required:
+                                    - skywalking
+                                - required:
+                                    - opentelemetry
+                                - required:
+                                    - prometheus
+                                - required:
+                                    - envoyFileAccessLog
+                                - required:
+                                    - envoyHttpAls
+                                - required:
+                                    - envoyTcpAls
+                                - required:
+                                    - envoyOtelAls
                         properties:
                           datadog:
                             properties:
@@ -8828,6 +8909,15 @@ spec:
                                     - B3
                                   type: string
                                 type: array
+                              maxTagLength:
+                                type: integer
+                              port:
+                                type: integer
+                              service:
+                                type: string
+                            type: object
+                          opentelemetry:
+                            properties:
                               maxTagLength:
                                 type: integer
                               port:
@@ -9033,7 +9123,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: peeristiocontrolplanes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.3
+    resource.alpha.banzaicloud.io/revision: 1.16.1
 spec:
   group: servicemesh.cisco.com
   names:
@@ -11375,6 +11465,8 @@ spec:
                                 - required:
                                     - skywalking
                                 - required:
+                                    - opentelemetry
+                                - required:
                                     - prometheus
                                 - required:
                                     - envoyFileAccessLog
@@ -11384,6 +11476,7 @@ spec:
                                     - envoyTcpAls
                                 - required:
                                     - envoyOtelAls
+                                - {}
                           - required:
                               - envoyExtAuthzHttp
                           - required:
@@ -11401,6 +11494,8 @@ spec:
                           - required:
                               - skywalking
                           - required:
+                              - opentelemetry
+                          - required:
                               - prometheus
                           - required:
                               - envoyFileAccessLog
@@ -11410,6 +11505,37 @@ spec:
                               - envoyTcpAls
                           - required:
                               - envoyOtelAls
+                          - not:
+                              anyOf:
+                                - {}
+                                - required:
+                                    - envoyExtAuthzHttp
+                                - required:
+                                    - envoyExtAuthzGrpc
+                                - required:
+                                    - zipkin
+                                - required:
+                                    - lightstep
+                                - required:
+                                    - datadog
+                                - required:
+                                    - stackdriver
+                                - required:
+                                    - opencensus
+                                - required:
+                                    - skywalking
+                                - required:
+                                    - opentelemetry
+                                - required:
+                                    - prometheus
+                                - required:
+                                    - envoyFileAccessLog
+                                - required:
+                                    - envoyHttpAls
+                                - required:
+                                    - envoyTcpAls
+                                - required:
+                                    - envoyOtelAls
                         properties:
                           datadog:
                             properties:
@@ -11592,6 +11718,15 @@ spec:
                                     - B3
                                   type: string
                                 type: array
+                              maxTagLength:
+                                type: integer
+                              port:
+                                type: integer
+                              service:
+                                type: string
+                            type: object
+                          opentelemetry:
+                            properties:
                               maxTagLength:
                                 type: integer
                               port:
@@ -17635,6 +17770,8 @@ spec:
                                 - required:
                                     - skywalking
                                 - required:
+                                    - opentelemetry
+                                - required:
                                     - prometheus
                                 - required:
                                     - envoyFileAccessLog
@@ -17644,6 +17781,7 @@ spec:
                                     - envoyTcpAls
                                 - required:
                                     - envoyOtelAls
+                                - {}
                           - required:
                               - envoyExtAuthzHttp
                           - required:
@@ -17661,6 +17799,8 @@ spec:
                           - required:
                               - skywalking
                           - required:
+                              - opentelemetry
+                          - required:
                               - prometheus
                           - required:
                               - envoyFileAccessLog
@@ -17670,6 +17810,37 @@ spec:
                               - envoyTcpAls
                           - required:
                               - envoyOtelAls
+                          - not:
+                              anyOf:
+                                - {}
+                                - required:
+                                    - envoyExtAuthzHttp
+                                - required:
+                                    - envoyExtAuthzGrpc
+                                - required:
+                                    - zipkin
+                                - required:
+                                    - lightstep
+                                - required:
+                                    - datadog
+                                - required:
+                                    - stackdriver
+                                - required:
+                                    - opencensus
+                                - required:
+                                    - skywalking
+                                - required:
+                                    - opentelemetry
+                                - required:
+                                    - prometheus
+                                - required:
+                                    - envoyFileAccessLog
+                                - required:
+                                    - envoyHttpAls
+                                - required:
+                                    - envoyTcpAls
+                                - required:
+                                    - envoyOtelAls
                         properties:
                           datadog:
                             properties:
@@ -17852,6 +18023,15 @@ spec:
                                     - B3
                                   type: string
                                 type: array
+                              maxTagLength:
+                                type: integer
+                              port:
+                                type: integer
+                              service:
+                                type: string
+                            type: object
+                          opentelemetry:
+                            properties:
                               maxTagLength:
                                 type: integer
                               port:
@@ -18057,7 +18237,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiomeshes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.3
+    resource.alpha.banzaicloud.io/revision: 1.16.1
 spec:
   group: servicemesh.cisco.com
   names:
@@ -18763,6 +18943,8 @@ spec:
                                 - required:
                                     - skywalking
                                 - required:
+                                    - opentelemetry
+                                - required:
                                     - prometheus
                                 - required:
                                     - envoyFileAccessLog
@@ -18772,6 +18954,7 @@ spec:
                                     - envoyTcpAls
                                 - required:
                                     - envoyOtelAls
+                                - {}
                           - required:
                               - envoyExtAuthzHttp
                           - required:
@@ -18789,6 +18972,8 @@ spec:
                           - required:
                               - skywalking
                           - required:
+                              - opentelemetry
+                          - required:
                               - prometheus
                           - required:
                               - envoyFileAccessLog
@@ -18798,6 +18983,37 @@ spec:
                               - envoyTcpAls
                           - required:
                               - envoyOtelAls
+                          - not:
+                              anyOf:
+                                - {}
+                                - required:
+                                    - envoyExtAuthzHttp
+                                - required:
+                                    - envoyExtAuthzGrpc
+                                - required:
+                                    - zipkin
+                                - required:
+                                    - lightstep
+                                - required:
+                                    - datadog
+                                - required:
+                                    - stackdriver
+                                - required:
+                                    - opencensus
+                                - required:
+                                    - skywalking
+                                - required:
+                                    - opentelemetry
+                                - required:
+                                    - prometheus
+                                - required:
+                                    - envoyFileAccessLog
+                                - required:
+                                    - envoyHttpAls
+                                - required:
+                                    - envoyTcpAls
+                                - required:
+                                    - envoyOtelAls
                         properties:
                           datadog:
                             properties:
@@ -18980,6 +19196,15 @@ spec:
                                     - B3
                                   type: string
                                 type: array
+                              maxTagLength:
+                                type: integer
+                              port:
+                                type: integer
+                              service:
+                                type: string
+                            type: object
+                          opentelemetry:
+                            properties:
                               maxTagLength:
                                 type: integer
                               port:
@@ -19190,7 +19415,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiomeshgateways.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.3
+    resource.alpha.banzaicloud.io/revision: 1.16.1
 spec:
   group: servicemesh.cisco.com
   names:
