enable multiple custom templates

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -6347,6 +6347,10 @@ spec:
                   type: object
                 sidecarInjector:
                   properties:
+                    defaultSidecarTemplates:
+                      items:
+                        type: string
+                      type: array
                     deployment:
                       properties:
                         affinity:
@@ -7929,8 +7933,15 @@ spec:
                       type: object
                     templates:
                       properties:
-                        custom:
-                          type: string
+                        customTemplates:
+                          items:
+                            properties:
+                              name:
+                                type: string
+                              template:
+                                type: string
+                            type: object
+                          type: array
                         gateway:
                           type: string
                         sidecar:
@@ -15470,6 +15481,10 @@ spec:
                   type: object
                 sidecarInjector:
                   properties:
+                    defaultSidecarTemplates:
+                      items:
+                        type: string
+                      type: array
                     deployment:
                       properties:
                         affinity:
@@ -17052,8 +17067,15 @@ spec:
                       type: object
                     templates:
                       properties:
-                        custom:
-                          type: string
+                        customTemplates:
+                          items:
+                            properties:
+                              name:
+                                type: string
+                              template:
+                                type: string
+                            type: object
+                          type: array
                         gateway:
                           type: string
                         sidecar:
