--- a/internal/components/discovery/testdata/icp-passive-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-passive-test-cr.yaml
@@ -20,13 +20,23 @@ spec:
             env:
             - name: TEMPLATE
               value: gateway-passive
-      custom: |
-        spec:
-          containers:
-          - name: istio-proxy
-            env:
-            - name: TEMPLATE
-              value: custom-passive
+      customTemplates:
+        - name: custom1
+          template: |
+            spec:
+              containers:
+              - name: istio-proxy
+                env:
+                - name: TEMPLATE
+                  value: custom-passive1
+        - name: custom2
+          template: |
+            spec:
+              containers:
+              - name: istio-proxy
+                env:
+                - name: TEMPLATE
+                  value: custom-passive2
   meshID: mesh1
   clusterID: demo-cluster2
   version: "1.15.3"
