--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -65,7 +65,10 @@ apiVersion: v1
 data:
   config: |-
     # defaultTemplates defines the default template to use for pods that do not explicitly specify a template
-    defaultTemplates: [sidecar, sidecarOverrides]
+    defaultTemplates:
+    - sidecar
+    - sidecarOverrides
+    - custom1
     policy: enabled
     httpProxyEnvs:
       noProxy: localhost
@@ -1217,13 +1220,20 @@ data:
           securityContext:
             fsGroup: 1337
           {{- end }}
-      custom: |
+      custom1: |
         spec:
           containers:
           - name: istio-proxy
             env:
             - name: TEMPLATE
-              value: custom
+              value: custom1
+      custom2: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: custom2
       gatewayOverrides: |
         spec:
           containers:
@@ -1392,7 +1402,11 @@ data:
       "revision": "cp-v115x",
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
-        "defaultTemplates": [],
+        "defaultTemplates": [
+          "sidecar",
+          "sidecarOverrides",
+          "custom1"
+        ],
         "enableNamespacesByDefault": false,
         "httpProxyEnvs": {
           "noProxy": "localhost"
@@ -1401,7 +1415,8 @@ data:
         "neverInjectSelector": [],
         "rewriteAppHTTPProbe": true,
         "templates": {
-          "custom": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom\n",
+          "custom1": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom1\n",
+          "custom2": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom2\n",
           "gatewayOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: gateway\n",
           "sidecarOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: sidecar\n"
         }
