--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -36,7 +36,9 @@ apiVersion: v1
 data:
   config: |-
     # defaultTemplates defines the default template to use for pods that do not explicitly specify a template
-    defaultTemplates: [sidecar, sidecarOverrides]
+    defaultTemplates:
+    - sidecar
+    - sidecarOverrides
     policy: enabled
     httpProxyEnvs:
       null
@@ -1188,13 +1190,20 @@ data:
           securityContext:
             fsGroup: 1337
           {{- end }}
-      custom: |
+      custom1: |
         spec:
           containers:
           - name: istio-proxy
             env:
             - name: TEMPLATE
-              value: custom-passive
+              value: custom-passive1
+      custom2: |
+        spec:
+          containers:
+          - name: istio-proxy
+            env:
+            - name: TEMPLATE
+              value: custom-passive2
       gatewayOverrides: |
         spec:
           containers:
@@ -1324,13 +1333,17 @@ data:
       "revision": "cp-v115x",
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
-        "defaultTemplates": [],
+        "defaultTemplates": [
+          "sidecar",
+          "sidecarOverrides"
+        ],
         "enableNamespacesByDefault": false,
         "injectedAnnotations": {},
         "neverInjectSelector": [],
         "rewriteAppHTTPProbe": true,
         "templates": {
-          "custom": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom-passive\n",
+          "custom1": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom-passive1\n",
+          "custom2": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: custom-passive2\n",
           "gatewayOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: gateway-passive\n",
           "sidecarOverrides": "spec:\n  containers:\n  - name: istio-proxy\n    env:\n    - name: TEMPLATE\n      value: sidecar-passive\n"
         }
