--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -182,7 +182,7 @@ telemetry:
     prometheus:
       wasmEnabled: false
 sidecarInjectorWebhook:
-  defaultTemplates: [ sidecar, sidecarOverrides, custom1 ]
+  defaultTemplates: [ sidecar, sidecarOverrides ]
   templates:
     custom1: |
       spec:
