--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: kristofgyuracz/istio-operator
-  newTag: 1.1.11
+  newName: ghcr.io/banzaicloud/istio-operator
