--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -1829,6 +1829,12 @@ rules:
   - list
   - update
   - delete
+- resources:
+  - configmaps
+  apiGroups:
+  - ""
+  verbs:
+  - delete
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
