--- a/internal/assets/manifests/istio-cni/templates/daemonset.yaml
+++ b/internal/assets/manifests/istio-cni/templates/daemonset.yaml
@@ -1,6 +1,11 @@
 # This manifest installs the Istio install-cni container, as well
 # as the Istio CNI plugin and config on
 # each master and worker node in a Kubernetes cluster.
+{{- $defaultBinDir :=
+    (.Capabilities.KubeVersion.GitVersion | contains "-gke") | ternary
+      "/home/kubernetes/bin"
+      "/opt/cni/bin"
+}}
 kind: DaemonSet
 apiVersion: apps/v1
 metadata:
@@ -44,7 +49,11 @@ spec:
         # This container installs the Istio CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-{{- include "dockerImage" (dict "image" .Values.cni.image "hub" .Values.global.hub "tag" .Values.global.tag) | indent 10 -}}
+{{- if contains "/" .Values.cni.image }}
+          image: "{{ .Values.cni.image }}"
+{{- else }}
+          image: "{{ .Values.cni.hub | default .Values.global.hub }}/{{ .Values.cni.image | default "install-cni" }}:{{ .Values.cni.tag | default .Values.global.tag }}{{with (.Values.cni.variant | default .Values.global.variant)}}-{{.}}{{end}}"
+{{- end }}
 {{- if .Values.global.imagePullPolicy }}
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- end }}
@@ -52,6 +61,15 @@ spec:
             httpGet:
               path: /readyz
               port: 8000
+          securityContext:
+            runAsGroup: 0
+            runAsUser: 0
+            runAsNonRoot: false
+            privileged: {{ .Values.cni.privileged }}
+{{- if .Values.cni.seccompProfile }}
+            seccompProfile:
+{{ toYaml .Values.cni.seccompProfile | trim | indent 14 }}
+{{- end }}
           command: ["install-cni"]
           args:
             {{- if .Values.global.logging.level }}
@@ -105,14 +123,25 @@ spec:
               name: cni-log-dir
 {{ include "toYamlIf" (dict "value" .Values.cni.volumeMounts) | indent 12 }}
 {{ include "toYamlIf" (dict "value" .Values.cni.resources "key" "resources" "indent" 2) | indent 10 }}
-{{ include "toYamlIf" (dict "value" .Values.cni.securityContext "key" "securityContext" "indent" 2) | indent 10 }}
 {{- if .Values.cni.taint.enabled }}
         - name: taint-controller
-{{- include "dockerImage" (dict "image" .Values.cni.taint.image "hub" .Values.global.hub "tag" .Values.global.tag) | indent 10 -}}
+{{- if contains "/" .Values.cni.image }}
+          image: "{{ .Values.cni.image }}"
+{{- else }}
+          image: "{{ .Values.cni.hub | default .Values.global.hub }}/{{ .Values.cni.image | default "install-cni" }}:{{ .Values.cni.tag | default .Values.global.tag }}{{with (.Values.cni.variant | default .Values.global.variant)}}-{{.}}{{end}}"
+{{- end }}
 {{- if .Values.global.imagePullPolicy }}
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- end }}
           command: ["/opt/local/bin/istio-cni-taint"]
+          securityContext:
+            runAsUser: 1337
+            runAsGroup: 1337
+            runAsNonRoot: true
+{{- if .Values.cni.seccompProfile }}
+            seccompProfile:
+{{ toYaml .Values.cni.seccompProfile | trim | indent 14 }}
+{{- end }}
           env:
           - name: "TAINT_RUN-AS-DAEMON"
             value: "true"
@@ -123,13 +152,12 @@ spec:
 {{ include "toYamlIf" (dict "value" .Values.cni.taint.env) | indent 10 }}
 {{ include "toYamlIf" (dict "value" .Values.cni.taint.volumeMounts "key" "volumeMounts" "indent" 2) | indent 10 }}
 {{ include "toYamlIf" (dict "value" .Values.cni.taint.resources "key" "resources" "indent" 2) | indent 10 }}
-{{ include "toYamlIf" (dict "value" .Values.cni.taint.securityContext "key" "securityContext" "indent" 2) | indent 10 }}
 {{- end }}
       volumes:
         # Used to install CNI.
         - name: cni-bin-dir
           hostPath:
-            path: {{ default "/opt/cni/bin" .Values.cni.cniBinDir }}
+            path: {{ .Values.cni.cniBinDir | default $defaultBinDir }}
         - name: cni-net-dir
           hostPath:
             path: {{ default "/etc/cni/net.d" .Values.cni.cniConfDir }}
