--- a/internal/assets/manifests/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-discovery/values.yaml
@@ -11,6 +11,7 @@ pilot:
 
   hub: ""
   tag: ""
+  variant: ""
 
   # Can be a full hub/image:tag
   image: pilot
@@ -21,6 +22,9 @@ pilot:
     requests:
       cpu: 500m
       memory: 2048Mi
+
+  # Set to `type: RuntimeDefault` to use the default profile if available.
+  seccompProfile: {}
 
   env: []
 
@@ -42,7 +46,7 @@ pilot:
   jwksResolverExtraRootCA: ""
 
   # This is used to set the source of configuration for
-  # the associated address in configSource, if nothing is specificed
+  # the associated address in configSource, if nothing is specified
   # the default MCP is assumed.
   configSource:
     subscribedResources: []
@@ -63,15 +67,6 @@ pilot:
   # Install the mesh config map, generated from values.yaml.
   # If false, pilot wil use default values (by default) or user-supplied values.
   configMap: true
-
-  securityContext:
-    readOnlyRootFilesystem: true
-    runAsUser: 1337
-    runAsGroup: 1337
-    runAsNonRoot: true
-    capabilities:
-      drop:
-      - ALL
 
   podSecurityContext:
     fsGroup: 1337
@@ -250,6 +245,9 @@ global:
   hub: istio
   # Default tag for Istio images.
   tag: "1.16.1"
+  # Variant of the image to use.
+  # Currently supported are: [debug, distroless]
+  variant: ""
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
