Modify podSecurityContext and securityContext for RHOS

--- a/deploy/charts/istio-operator/templates/operator-deployment.yaml
+++ b/deploy/charts/istio-operator/templates/operator-deployment.yaml
@@ -43,6 +43,8 @@ spec:
         ports:
           - containerPort: 8443
             name: https
+        securityContext:
+          {{- toYaml .Values.securityContext | nindent 10 }}
       {{- end }}
       - command:
         - /manager
