Changes related to ambient
Includes: Assest change, add ambientTopology to CRD
a reconciler for the ztunnel

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -54,6 +54,12 @@ spec:
           properties:
             spec:
               properties:
+                ambientTopology:
+                  properties:
+                    enabled:
+                      nullable: true
+                      type: boolean
+                  type: object
                 caAddress:
                   type: string
                 caProvider:
@@ -9184,6 +9190,12 @@ spec:
           properties:
             spec:
               properties:
+                ambientTopology:
+                  properties:
+                    enabled:
+                      nullable: true
+                      type: boolean
+                  type: object
                 caAddress:
                   type: string
                 caProvider:
