--- a/internal/assets/manifests/istio-discovery/templates/clusterrole.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/clusterrole.yaml
@@ -82,6 +82,9 @@ rules:
       - "signers"
     resourceNames:
     - "kubernetes.io/legacy-unknown"
+{{- range .Values.global.certSigners }}
+    - {{ . | quote }}
+{{- end }}
     verbs: ["approve"]
 
   # Used by Istiod to verify the JWT tokens
