--- a/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
@@ -35,6 +35,9 @@ webhooks:
           - networking.istio.io
           - telemetry.istio.io
           - extensions.istio.io
+          {{- if .Values.base.validateGateway }}
+          - gateway.networking.k8s.io
+          {{- end }}
         apiVersions:
           - "*"
         resources:
